[gd_scene load_steps=5 format=3 uid="uid://bcvq7nxkgmh2q"]

[ext_resource type="Script" path="res://scripts/enemies/base_enemy.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 40)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 25.0

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 25
script = ExtResource("1_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.3, 0.3, 1)
texture = SubResource("PlaceholderTexture2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(30, 0)
collision_mask = 8

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2(25, 0)
target_position = Vector2(0, 30)
collision_mask = 8
